# slip-stream

./: .dockerignore  .gitignore  .openapi-baseline.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  llms-full.txt  llms.txt  pyproject.toml
.claude/rules/: backend-patterns.md  case-convention.md  hexagonal-architecture.md  testing-rules.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: benchmark.yml  ci.yml  docs.yml  fuzz.yml  publish.yml  security.yml
.zap/: rules.tsv
benchmarks/: Dockerfile  app.py  docker-compose.compat.yml  docker-compose.streams.yml  docker-compose.yml  measure.sh  slip-stream.yml
benchmarks/fuzz/: checks.py  gen_openapi.py  mcp_client.py  requirements.txt  run_fuzz.py  run_graphql_fuzz.py  run_mcp_fuzz.py  run_stream_fuzz.py
benchmarks/graphql/: test_graphql_perf.py
benchmarks/k6/: compat_test.js  graphql_perf.js  perf_baseline.js  stream_perf.js
benchmarks/k6/data/: payloads.json
benchmarks/mcp/: test_mcp_perf.py
benchmarks/schemas/: bad_schema.json  category.json  fuzz_test_entity.json  order.json  pet.json  pet_v2.json  tag.json  user.json
benchmarks/stream/: test_stream_perf.py
benchmarks/stream/consumer/: Dockerfile  main.go
docs/: api-reference.md  context.md  decorators.md  errors.md  events.md  exemplars.md  filters.md  getting-started.md  index.md  mcp.md  observability.md  overrides.md  schemas.md
examples/quickstart/: main.py
examples/quickstart/advanced/: __init__.py  commands.py  main.py  ports.py  slip-stream.yml
examples/quickstart/advanced/adapters/: api_mapping.py  pet_enrichment.py  shipping.py
examples/quickstart/advanced/services/: order_logic.py  pet_logic.py
examples/quickstart/schemas/: order.json  pet.json  todo.json
slip_stream/: __init__.py  app.py  cli.py  config.py  container.py  database.py  logging_config.py  registry.py  schema_utils.py  sdk_generator.py  telemetry.py
slip_stream/adapters/api/: dependencies.py  endpoint_factory.py  error_handler.py  graphql_factory.py  health.py  query_schema.py  schema_router.py  schema_vending.py  topology.py
slip_stream/adapters/api/filters/: __init__.py  auth.py  base.py  chain.py  content_negotiation.py  envelope.py  etag.py  middleware.py  projection.py  rate_limit.py  rego.py  schema_version.py  security_headers.py  telemetry.py
slip_stream/adapters/persistence/db/: crud_factory.py  generic_crud.py  repository_factory.py  sql_repository.py  sql_repository_factory.py
slip_stream/adapters/persistence/schema/: __init__.py  composite_storage.py  file_storage.py  http_storage.py  mongo_storage.py
slip_stream/adapters/streaming/: base.py
slip_stream/core/: audit.py  bulk.py  context.py  events.py  operation.py  pagination.py  policy.py  query.py  storage.py  webhooks.py
slip_stream/core/domain/: base.py
slip_stream/core/ports/: __init__.py  repository.py  schema_storage.py
slip_stream/core/schema/: ref_resolver.py  registry.py  versioning.py  watcher.py
slip_stream/core/services/: generic.py
slip_stream/mcp/: __init__.py  server.py
slip_stream/testing/: __init__.py  app_builder.py  checks.py  data_gen.py  openapi.py  runner.py
tests/: conftest.py  test_audit_trail.py  test_auth_filter.py  test_bulk_operations.py  test_channel_decorators.py  test_cli.py  test_composite_schema_storage.py  test_config.py  test_container.py  test_content_negotiation.py  test_cors.py  test_cursor_pagination.py  test_database_manager.py  test_dependencies.py  test_endpoint_factory.py  test_entity_hydration.py  test_envelope_filter.py  test_error_handler.py  test_etag_filter.py  test_event_bus.py  test_event_streaming.py  test_file_schema_storage.py  test_filter_base.py  test_filter_chain.py  test_filter_middleware.py  test_graphql_factory.py  test_graphql_security.py  test_handler_overrides.py  test_health.py  test_http_schema_storage.py  test_logging_config.py  test_mcp_server.py  test_mongo_schema_storage.py  test_onboarding.py  test_openapi_compat.py  test_operation_executor.py  test_projection_filter.py  test_query_dsl.py  test_rate_limit_filter.py  test_ref_resolver.py  (+19 more)
tests/benchmarks/: conftest.py  test_bench_schema.py
tests/integration/: conftest.py  test_mongo_crud.py  test_sql_crud.py
tests/sample_schemas/: gadget.json  widget.json  widget_with_ref.json
tests/sample_schemas/definitions/: address.json
tests/schemathesis/: conftest.py  test_negative_fuzzing.py  test_positive_fuzzing.py  test_stateful_lifecycle.py
tests/security/: zap_target.py
