[tool.poetry]
name = "slip-stream"
version = "0.1.0"
description = "JSON Schema-driven hexagonal backend framework for FastAPI + MongoDB"
authors = ["draw"]
license = "MIT"
readme = "README.md"
packages = [{include = "slip_stream"}]
keywords = ["fastapi", "mongodb", "hexagonal", "schema-driven", "crud", "pydantic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.115.0"
motor = "^3.4.0"
pydantic = ">=2.0.0"
pymongo = ">=4.0.0"
pyyaml = {version = ">=6.0", optional = true}
xmltodict = {version = ">=0.13.0", optional = true}
httpx = {version = ">=0.27.0", optional = true}
strawberry-graphql = {version = ">=0.235.0", optional = true, extras = ["fastapi"]}
mcp = {version = ">=1.0.0", optional = true}
sqlalchemy = {version = ">=2.0.0", optional = true, extras = ["asyncio"]}
dotted-dict = "^1.1.3"

[tool.poetry.extras]
yaml = ["pyyaml"]
xml = ["xmltodict"]
remote = ["httpx"]
graphql = ["strawberry-graphql"]
mcp = ["mcp"]
sql = ["sqlalchemy"]
all = ["pyyaml", "xmltodict", "httpx", "strawberry-graphql", "mcp", "sqlalchemy"]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.24.0"
mongomock-motor = ">=0.0.34"
httpx = ">=0.27.0"
black = ">=24.0.0"
mypy = ">=1.0.0"
ruff = ">=0.4.0"
pyyaml = ">=6.0"
xmltodict = ">=0.13.0"
pdoc = "^16.0.0"
strawberry-graphql = {version = ">=0.235.0", extras = ["fastapi"]}
mcp = ">=1.0.0"
sqlalchemy = "^2.0.46"
aiosqlite = "^0.22.1"
greenlet = "^3.3.2"

[tool.poetry.scripts]
slip = "slip_stream.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
